# liblsoda

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  lsoda-config.cmake.in
benchmark/: CMakeLists.txt  fex.hh  main.cc  pk.hh  runner.h  runner.hh  scipy.hh
include/lsoda/: common.h  lsoda.h  lsoda_internal.h
src/: blas.h  cfode.c  cfode_static.c  common.c  corfailure.c  correction.c  daxpy.c  ddot.c  dgefa.c  dgesl.c  dscal.c  fnorm.c  idamax.c  intdy.c  lsoda.c  methodswitch.c  orderswitch.c  prja.c  scaleh.c  solsy.c  stoda.c  strdup_printf.c  vmnorm.c
test/: CMakeLists.txt  test.c  test.cc
test/boost/: CMakeLists.txt  test.cc
test/eigen/: CMakeLists.txt  test.cc
